--- a/home.html
+++ b/home.html
@@ -8,5 +8,6 @@
 <h1>Hello Seattle!</h1>
 <h2>I hope you're doing well :)</h2>
 <h2>I enjoy long walks on the beach</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum cumque doloremque dolorem repellat provident eligendi asperiores quos, cupiditate sit molestias pariatur! Ipsa molestias reprehenderit culpa similique illo voluptatibus, obcaecati temporibus.</p>
 </body>
 </html>
