Starter HTML and CSS

--- a/home.html
+++ b/home.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Seattle Central Programming Club</title>
+    <link rel="stylesheet" href="./css/foundation.css">
 </head>
 <body>
-<h1>Hello Seattle!</h1>
-<h2>I hope you're doing well :)</h2>
-<h2>I enjoy long walks on the beach</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum cumque doloremque dolorem repellat provident eligendi asperiores quos, cupiditate sit molestias pariatur! Ipsa molestias reprehenderit culpa similique illo voluptatibus, obcaecati temporibus.</p>
+    <header>
+
+    </header>
+
+    <aside>
+
+    </aside>
+
+    <main>
+        <div id="page-body">
+            <div id="inner-page-body" style="align-content: center">
+                <h1>This page is under construction. Thank you for your patience.</h1>
+                <div>
+                    <img src="./images/cute_construction_worker.png" style="height: 100%; width: 100%">
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!--
+    <footer>
+
+    </footer>
+    -->
 </body>
 </html>
