Header and Sidebar now created dynamically from one source for every page

--- a/home.html
+++ b/home.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <title>Seattle Central Programming Club</title>
     <link rel="stylesheet" href="./css/foundation.css">
+    <script src="./javascript/header.js" type="text/javascript" defer></script>
+    <script src="./javascript/aside.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <header>
 
-    </header>
+    <header-component></header-component>
 
-    <aside>
-
-    </aside>
+    <aside-component></aside-component>
 
     <main>
         <div id="page-body">
