--- a/html/past-members.html
+++ b/html/past-members.html
@@ -21,26 +21,27 @@
     <div id="page-body">
         <div id="inner-page-body" style="align-content: center">
             <h1>Past Members</h1>
-            <p4>Perhaps at some point in the future we will have previous members,
-                 but right now we don't...</p4>
+            <p1>Perhaps at some point in the future we will have previous members,
+                 but right now we don't...</p1>
             <div>
                 <img src="../images/future.jpg" style="height: 50%; width: 50%">
             </div>
             <div class="grid-container">
                 <div>
-                    <p6>Mr. Future</p6>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
                     <img src="../images/future.jpg" style="height: 100%; width: 100%">
                 </div>
                 <div>
-                    <p6>Mr. Future</p6>
+                    <h4>Mr. Future</h4>
                     <img src="../images/future.jpg" style="height: 100%; width: 100%">
                 </div>
                 <div>
-                    <p6>Mr. Future</p6>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                </div>
-                <div>
-                    <p6>Mr. Future</p6>
+                    <h4>Mr. Future</h4>
                     <img src="../images/future.jpg" style="height: 100%; width: 100%">
                 </div>
             </div>
