Past-Member page complete

--- a/html/past-members.html
+++ b/html/past-members.html
@@ -23,10 +23,10 @@
             <h1>Past Members</h1>
             <p1>Perhaps at some point in the future we will have previous members,
                  but right now we don't...</p1>
-            <div>
-                <img src="../images/future.jpg" style="height: 50%; width: 50%">
+            <div class = "grid-gap">
+
             </div>
-            <div class="grid-container">
+            <div class = "grid-container">
                 <div>
                     <h4>Mr. Future</h4>
                     <img src="../images/future.jpg" style="height: 100%; width: 100%">
@@ -35,15 +35,39 @@
                 <div>
                     <h4>Mr. Future</h4>
                     <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
                 </div>
                 <div>
                     <h4>Mr. Future</h4>
                     <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
                 </div>
                 <div>
                     <h4>Mr. Future</h4>
                     <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
                 </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+
             </div>
         </div>
     </div>
