--- a/html/member-pages/OhtakeRisa.html
+++ b/html/member-pages/OhtakeRisa.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Seattle Central Programming Club</title>
-  <link rel="stylesheet" href="../css/foundation.css">
-  <link rel="stylesheet" href="../css/members.css">
-  <script src="../javascript/header.js" type="text/javascript" defer></script>
-  <script src="../javascript/aside.js" type="text/javascript" defer></script>
+  <link rel="stylesheet" href="../../css/foundation.css">
+  <link rel="stylesheet" href="../../css/members.css">
+  <script src="../../javascript/header.js" type="text/javascript" defer></script>
+  <script src="../../javascript/aside.js" type="text/javascript" defer></script>
 </head>
 <body>
 
