--- a/html/past-members.html
+++ b/html/past-members.html
@@ -2,9 +2,76 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Seattle Central Programming Club</title>
+        <link rel="stylesheet" href="../css/foundation.css">
+        <link rel="stylesheet" href="../css/past-members.css">
+        <script src="../javascript/header.js" type="text/javascript" defer></script>
+        <script src="../javascript/aside.js" type="text/javascript" defer></script>
+        <title>Title</title>
+    </head>
 <body>
+
+<header-component></header-component>
+
+<aside-component></aside-component>
+
+<main>
+    <div id="page-body">
+        <div id="inner-page-body" style="align-content: center">
+            <h1>Past Members</h1>
+            <p1>Perhaps at some point in the future we will have previous members,
+                but right now we don't...</p1>
+            <div class = "grid-gap">
+
+            </div>
+            <div class = "grid-container">
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+                <div>
+                    <h4>Mr. Future</h4>
+                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</main>
 
 </body>
 </html>
