--- a/html/past-members.html
+++ b/html/past-members.html
@@ -28,9 +28,9 @@
             </div>
             <div class = "grid-container">
                 <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                    <h4>Stephen Cushing</h4>
+                    <img src="../images/member-photos/stephen-photo.jpg" style="height: 100%; width: 100%">
+                    <p1>"Sometimes I'm sad, so I decide to stop being sad and be awesome instead."</p1>
                 </div>
                 <div>
                     <h4>Mr. Future</h4>
