--- a/html/member-pages/a-template-for-new-pages.html
+++ b/html/member-pages/a-template-for-new-pages.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Seattle Central Programming Club</title>
+  <link rel="stylesheet" href="../../css/navigation.css">
   <link rel="stylesheet" href="../../css/foundation.css">
   <link rel="stylesheet" href="../../css/members.css">
   <script src="../../javascript/aside.js" type="text/javascript" defer></script>
