CSS Referencing Fix to multiple pages

--- a/html/member-pages/a-template-for-new-pages.html
+++ b/html/member-pages/a-template-for-new-pages.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../../css/members.css">
   <script src="../../javascript/aside.js" type="text/javascript" defer></script>
   <script src="../../javascript/header.js" type="text/javascript" defer></script>
+  <script src="../../javascript/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
 
@@ -26,5 +27,8 @@
     <!-- TO HERE -->
   </div>
 </main>
+
+<footer-component></footer-component>
+
 </body>
 </html>
