--- a/html/member-pages/JohnsonDaniel.html
+++ b/html/member-pages/JohnsonDaniel.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Seattle Central Programming Club</title>
+    <link rel="stylesheet" href="../../css/navigation.css">
     <link rel="stylesheet" href="../../css/foundation.css">
-    <link rel="stylesheet" href="../../css/members.css">
     <script src="../../javascript/aside.js" type="text/javascript" defer></script>
     <script src="../../javascript/header.js" type="text/javascript" defer></script>
+    <script src="../../javascript/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
 
@@ -25,5 +26,8 @@
         <!-- TO HERE -->
     </div>
 </main>
+
+<footer-component></footer-component>
+
 </body>
 </html>
