--- a/html/member-pages/OhtakeRisa.html
+++ b/html/member-pages/OhtakeRisa.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../../css/foundation.css">
   <script src="../../javascript/header.js" type="text/javascript" defer></script>
   <script src="../../javascript/aside.js" type="text/javascript" defer></script>
+  <script src="../../javascript/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
 
@@ -26,10 +27,7 @@
   </div>
 </main>
 
-<!--
-<footer>
+<footer-component></footer-component>
 
-</footer>
--->
 </body>
 </html>
