--- a/html/members.html
+++ b/html/members.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/members.css">
   <script src="../javascript/header.js" type="text/javascript" defer></script>
   <script src="../javascript/aside.js" type="text/javascript" defer></script>
-  <script src="./javascript/footer.js" type="text/javascript" defer></script>
+  <script src="../javascript/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
 
@@ -81,10 +81,7 @@
   </div>
 </main>
 
-<!--
-<footer>
+<footer-component></footer-component>
 
-</footer>
--->
 </body>
 </html>
