--- a/html/past-members.html
+++ b/html/past-members.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../css/past-members.css">
         <script src="../javascript/header.js" type="text/javascript" defer></script>
         <script src="../javascript/aside.js" type="text/javascript" defer></script>
+        <script src="../javascript/footer.js" type="text/javascript" defer></script>
     <title>Title</title>
 </head>
 <body>
@@ -72,6 +73,8 @@
         </div>
     </div>
 </main>
+
+<footer-component></footer-component>
 
 </body>
 </html>
