--- a/html/members.html
+++ b/html/members.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Seattle Central Programming Club</title>
-  <link rel="stylesheet" href="../css/foundation.css">
-  <link rel="stylesheet" href="../css/members.css">
-  <script src="../javascript/header.js" type="text/javascript" defer></script>
-  <script src="../javascript/aside.js" type="text/javascript" defer></script>
-  <script src="../javascript/footer.js" type="text/javascript" defer></script>
+    <meta charset="UTF-8">
+    <title>Seattle Central Programming Club</title>
+    <link rel="stylesheet" href="../css/foundation.css">
+    <link rel="stylesheet" href="../css/members.css">
+    <link rel="stylesheet" href="../css/navigation.css">
+    <script src="../javascript/header.js" type="text/javascript" defer></script>
+    <script src="../javascript/aside.js" type="text/javascript" defer></script>
+    <script src="../javascript/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
 
@@ -16,69 +17,69 @@
 <aside-component></aside-component>
 
 <main>
-  <div id="page-body">
-    <!-- CHANGE FROM HERE -->
-    <div id="inner-page-body" style="align-content: center">
-      
-      <h1>2022 Members</h1>
-      <img class="pictures-of-members-togeter" src="../images/pictures_of_members_togeter.jpg" alt="Pictures of Members Togeter">
-      
-      <div class="information">
-        <h2>Information Title</h2>
-        <p>Information Paragraph</p>
-      </div>
+    <div id="page-body">
+        <!-- CHANGE FROM HERE -->
+        <div id="inner-page-body" style="align-content: center">
 
-      <div class="members">
-        <!-- ONE MEMBER -->
-        <div class="member">
-          <h3>Name</h3>
-          <img src="../images/demo_members_image.jpeg" alt="members picture">
-        </div>
-        <!-- ONE MEMBER -->
-        <div class="member">
-          <h3>Name</h3>
-          <img src="../images/demo_members_image.jpeg" alt="members picture">
-        </div>
-        <!-- ONE MEMBER -->
-        <div class="member">
-          <h3>Name</h3>
-          <img src="../images/demo_members_image.jpeg" alt="members picture">
-        </div>
-        <!-- ONE MEMBER -->
-        <div class="member">
-          <h3>Name</h3>
-          <img src="../images/demo_members_image.jpeg" alt="members picture">
-        </div>
-        <!-- ONE MEMBER -->
-        <div class="member">
-          <h3>Name</h3>
-          <img src="../images/demo_members_image2.jpg" alt="members picture">
-        </div>
-        <!-- ONE MEMBER -->
-        <div class="member">
-          <h3>Name</h3>
-          <img src="../images/demo_members_image2.jpg" alt="members picture">
-        </div>
-        <!-- ONE MEMBER -->
-        <div class="member">
-          <h3>Name</h3>
-          <img src="../images/demo_members_image2.jpg" alt="members picture">
-        </div>
-      </div>
+            <h1>2022 Members</h1>
+            <img class="pictures-of-members-togeter" src="../images/pictures_of_members_togeter.jpg" alt="Pictures of Members Togeter">
 
-      <h1>Past Members</h1>
-      <div class="past-members">
-        <ul>
-          <li><a href="#">2021</a></li>
-          <li><a href="#">2020</a></li>
-          <li><a href="#">2019</a></li>
-          <li><a href="#">2018</a></li>
-        </ul>
-      </div>
+            <div class="information">
+                <h2>Information Title</h2>
+                <p>Information Paragraph</p>
+            </div>
 
+            <div class="members">
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <h3>Name</h3>
+                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <h3>Name</h3>
+                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <h3>Name</h3>
+                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <h3>Name</h3>
+                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <h3>Name</h3>
+                    <img src="../images/demo_members_image2.jpg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <h3>Name</h3>
+                    <img src="../images/demo_members_image2.jpg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <h3>Name</h3>
+                    <img src="../images/demo_members_image2.jpg" alt="members picture">
+                </div>
+            </div>
+
+            <h1>Past Members</h1>
+            <div class="past-members">
+                <ul>
+                    <li><a href="#">2021</a></li>
+                    <li><a href="#">2020</a></li>
+                    <li><a href="#">2019</a></li>
+                    <li><a href="#">2018</a></li>
+                </ul>
+            </div>
+
+        </div>
+        <!-- TO HERE -->
     </div>
-    <!-- TO HERE -->
-  </div>
 </main>
 
 <footer-component></footer-component>
