--- a/html/past-members.html
+++ b/html/past-members.html
@@ -7,6 +7,7 @@
         <title>Seattle Central Programming Club</title>
         <link rel="stylesheet" href="../css/foundation.css">
         <link rel="stylesheet" href="../css/past-members.css">
+        <link rel="stylesheet" href="../css/navigation.css">
         <script src="../javascript/header.js" type="text/javascript" defer></script>
         <script src="../javascript/aside.js" type="text/javascript" defer></script>
         <script src="../javascript/footer.js" type="text/javascript" defer></script>
