--- a/html/past-members.html
+++ b/html/past-members.html
@@ -29,46 +29,67 @@
 
             </div>
             <div class = "grid-container">
-                <div>
-                    <h4>Stephen Cushing</h4>
-                    <img src="../images/member-photos/stephen-photo.jpg" style="height: 100%; width: 100%">
-                    <p1>"Sometimes I'm sad, so I decide to stop being sad and be awesome instead."</p1>
+                <div class = "grid-box">
+                    <div class = "name">
+                        <h4>Stephen Cushing</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/member-photos/CushingStephen.jpg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"Sometimes I'm sad, so I decide to stop being sad and be awesome instead."</p1>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
+                <div class = "grid-box">
+                    <div class = "name">
+                        <h4>Francisco Fonseca</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/member-photos/FonsecaFrancisco.jpeg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
+
+                </div>
+                <div class = "grid-box">
+                    <h4>Daniel Johnson</h4>
+                    <div>
+                        <img src="../images/member-photos/JohnsonDaniel.jpeg" style="height: 100%; width: 100%">
+                    </div>
                     <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
                 </div>
-                <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                <div class = "grid-box">
+                    <div class= "name">
+                        <h4>Ted Miller</h4>
+                    </div>
+                    <div>
+                        <div class= "photo">
+                            <img src="../images/member-photos/MillerTed.jpeg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                <div class="grid-box">
+                    <div class = "name">
+                        <h4>Miho Suzuki</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/member-photos/SuzukiMiho.jpeg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
-                </div>
-                <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
-                </div>
-                <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
-                </div>
-                <div>
-                    <h4>Mr. Future</h4>
-                    <img src="../images/future.jpg" style="height: 100%; width: 100%">
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
-                </div>
+
 
             </div>
         </div>
