--- a/html/member-pages/stephen-cushing.html
+++ b/html/member-pages/stephen-cushing.html
@@ -21,7 +21,7 @@
     <div id="inner-page-body" style="align-content: center">
       <h1>Stephen Cushing</h1>
       <p1>This page is a work in progress</p1>
-      <img src="/images/stephen-photo.jpg" style="height: 100%; width: 100%">
+      <img src="/images/member-photos/CushingStephen.jpg" style="height: 100%; width: 100%">
 
     </div>
     <!-- TO HERE -->
