--- a/html/past-members.html
+++ b/html/past-members.html
@@ -23,46 +23,63 @@
     <div id="page-body">
         <div id="inner-page-body" style="align-content: center">
             <h1>Past Members</h1>
-            <p1>Perhaps at some point in the future we will have previous members,
-                 but right now we don't...</p1>
             <div class = "grid-gap">
 
             </div>
             <div class = "grid-container">
+
+
                 <div class = "grid-box">
                     <div class = "name">
                         <h4>Stephen Cushing</h4>
                     </div>
                     <div>
+                        <a href="member-pages/stephen-cushing.html">
                         <div class = "photo">
                             <img src="../images/member-photos/CushingStephen.jpg" style="height: 100%; width: 100%">
                         </div>
+                        </a>
                         <div class = "quote">
                             <p1>"Sometimes I'm sad, so I decide to stop being sad and be awesome instead."</p1>
                         </div>
                     </div>
                 </div>
+
+
                 <div class = "grid-box">
                     <div class = "name">
                         <h4>Francisco Fonseca</h4>
                     </div>
                     <div>
+                        <a href="member-pages/profile-franfonse.html">
                         <div class = "photo">
                             <img src="../images/member-photos/FonsecaFrancisco.jpeg" style="height: 100%; width: 100%">
                         </div>
+                        </a>
                         <div class = "quote">
                             <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
                         </div>
                     </div>
+                </div>
 
-                </div>
+
                 <div class = "grid-box">
-                    <h4>Daniel Johnson</h4>
-                    <div>
-                        <img src="../images/member-photos/JohnsonDaniel.jpeg" style="height: 100%; width: 100%">
+                    <div class="name">
+                        <h4>Daniel Johnson</h4>
                     </div>
-                    <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                    <div>
+                        <a href="member-pages/JohnsonDaniel.html">
+                        <div class="photo">
+                            <img src="../images/member-photos/JohnsonDaniel.jpeg" style="height: 100%; width: 100%">
+                        </div>
+                        </a>
+                        <div class="quote">
+                            <p1>"I have no idea."</p1>
+                        </div>
+                    </div>
                 </div>
+
+
                 <div class = "grid-box">
                     <div class= "name">
                         <h4>Ted Miller</h4>
@@ -76,13 +93,30 @@
                         </div>
                     </div>
                 </div>
+
+
                 <div class="grid-box">
                     <div class = "name">
                         <h4>Miho Suzuki</h4>
                     </div>
                     <div>
                         <div class = "photo">
-                            <img src="../images/member-photos/SuzukiMiho.jpeg" style="height: 100%; width: 100%">
+                            <img src="../images/member-photos/SuzukiMiho.JPG" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="grid-box">
+                    <div class = "name">
+                        <h4>Nhi Nguyen</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/member-photos/NhiNguyen.JPG" style="height: 100%; width: 100%">
                         </div>
                         <div class = "quote">
                             <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
