just some initial changes--will return tomorrow

--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -5,6 +5,7 @@
   <title>Seattle Central Programming Club</title>
   <link rel="stylesheet" href="../../css/foundation.css">
   <link rel="stylesheet" href="../../css/navigation.css">
+  <link rel="stylesheet" href="../../css/member-pages/ebrink.css">
   <script src="../../javascript/header.js" type="text/javascript" defer></script>
   <script src="../../javascript/aside.js" type="text/javascript" defer></script>
   <script src="../../javascript/footer.js" type="text/javascript" defer></script>
@@ -16,9 +17,9 @@
 <aside-component></aside-component>
 
 <main>
-  <div id="page-body">
+  <div class="page-body">
     <!-- CHANGE FROM HERE -->
-    <div id="inner-page-body" style="align-content: center">
+    <div class="inner-page-body" style="align-content: center">
         <h1>Under Construction!</h1>
 
         <p>Hello! I will begin working on this tomorrow (06/10/22)</p>
