styles and filler text

--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seattle Central Programming Club</title>
   <link rel="stylesheet" href="../../css/foundation.css">
   <link rel="stylesheet" href="../../css/navigation.css">
@@ -19,11 +20,41 @@
 <main>
   <div class="page-body">
     <!-- CHANGE FROM HERE -->
-    <div class="inner-page-body" style="align-content: center">
+    <div class="inner-page-body">
         <h1>Under Construction!</h1>
 
-        <p>Hello! I will begin working on this tomorrow (06/10/22)</p>
+        <h3>All Watched Over by Machines of Loving Grace</h3>
 
+            <p>I like to think (and</p>
+            <p>the sooner the better!)</p>
+            <p>of a cybernetic meadow</p>
+            <p>where mammals and computers</p>
+            <p>live together in mutually</p>
+            <p>programming harmony</p>
+            <p>like pure water</p>
+            <p>touching clear sky.</p>
+            <br>
+            <p>I like to think</p>
+            <p>(right now, please!)</p>
+            <p>of a cybernetic forest</p>
+            <p>filled with pines and electronics</p>
+            <p>where deer stroll peacefully</p>
+            <p>past computers</p>
+            <p>as if they were flowers</p>
+            <p>with spinning blossoms.</p>
+            <br>
+            <p>I like to think</p>
+            <p>(it has to be!)</p>
+            <p>of a cybernetic ecology</p>
+            <p>where we are free of our labors</p>
+            <p>and joined back to nature,</p>
+            <p>returned to our mammal</p>
+            <p>brothers and sisters,</p>
+            <p>and all watched over</p>
+            <p>by machines of loving grace.</p>
+            <p>- Richard Brautigan</p>
+
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
     </div>
     <!-- TO HERE -->
   </div>
