--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="../../css/foundation.css">
   <link rel="stylesheet" href="../../css/navigation.css">
   <link rel="stylesheet" href="../../css/member-pages/ebrink.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
   <script src="../../javascript/header.js" type="text/javascript" defer></script>
   <script src="../../javascript/aside.js" type="text/javascript" defer></script>
   <script src="../../javascript/footer.js" type="text/javascript" defer></script>
@@ -22,9 +27,9 @@
     <!-- CHANGE FROM HERE -->
     <div class="inner-page-body">
         <h1>Under Construction!</h1>
-
+        <div id="pic-temp"><h2>A photo will go here!</h2></div>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
         <h3>All Watched Over by Machines of Loving Grace</h3>
-
             <p>I like to think (and</p>
             <p>the sooner the better!)</p>
             <p>of a cybernetic meadow</p>
@@ -53,8 +58,6 @@
             <p>and all watched over</p>
             <p>by machines of loving grace.</p>
             <p>- Richard Brautigan</p>
-
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
     </div>
     <!-- TO HERE -->
   </div>
