--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -26,10 +26,21 @@
   <div class="page-body">
     <!-- CHANGE FROM HERE -->
     <div class="inner-page-body">
-        <h1>Under Construction!</h1>
+      <div id="projects">
+        <ul>
+          <li><a href="#top">top</a></li>
+          <li><a href="#one">one</a></li>
+          <li><a href="#two">two</a></li>
+          <li><a href="#three">three</a></li>
+          <li><a href="#four">four</a></li>
+          <li><a href="#five">five</a></li>
+        </ul>
+      </div>
+      <div id="text">
+        <a id="top"></a><h1>Hello World!</h1>
         <div id="pic-temp"><h2>A photo will go here!</h2></div>
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
-        <h3>All Watched Over by Machines of Loving Grace</h3>
+        <a id="one"></a><h3>All Watched Over by Machines of Loving Grace</h3>
             <p>I like to think (and</p>
             <p>the sooner the better!)</p>
             <p>of a cybernetic meadow</p>
@@ -38,7 +49,7 @@
             <p>programming harmony</p>
             <p>like pure water</p>
             <p>touching clear sky.</p>
-            <br>
+            <a id="two"></a><h3>All Watched Over by Machines of Loving Grace</h3>
             <p>I like to think</p>
             <p>(right now, please!)</p>
             <p>of a cybernetic forest</p>
@@ -47,7 +58,7 @@
             <p>past computers</p>
             <p>as if they were flowers</p>
             <p>with spinning blossoms.</p>
-            <br>
+            <a id="three"></a><h3>All Watched Over by Machines of Loving Grace</h3>
             <p>I like to think</p>
             <p>(it has to be!)</p>
             <p>of a cybernetic ecology</p>
@@ -59,6 +70,11 @@
             <p>by machines of loving grace.</p>
             <br>
             <p>- Richard Brautigan</p>
+            <a id="four"></a><h3>Project 4</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
+            <a id="five"></a><h3>Project 5</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
+          </div>
     </div>
     <!-- TO HERE -->
   </div>
