--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -39,41 +39,54 @@
       <div id="text">
         <a id="top"></a><h1>Hello World!</h1>
         <div id="pic-temp"><h2>A photo will go here!</h2></div>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
-        <a id="one"></a><h3>All Watched Over by Machines of Loving Grace</h3>
-            <p>I like to think (and</p>
-            <p>the sooner the better!)</p>
-            <p>of a cybernetic meadow</p>
-            <p>where mammals and computers</p>
-            <p>live together in mutually</p>
-            <p>programming harmony</p>
-            <p>like pure water</p>
-            <p>touching clear sky.</p>
-            <a id="two"></a><h3>All Watched Over by Machines of Loving Grace</h3>
-            <p>I like to think</p>
-            <p>(right now, please!)</p>
-            <p>of a cybernetic forest</p>
-            <p>filled with pines and electronics</p>
-            <p>where deer stroll peacefully</p>
-            <p>past computers</p>
-            <p>as if they were flowers</p>
-            <p>with spinning blossoms.</p>
-            <a id="three"></a><h3>All Watched Over by Machines of Loving Grace</h3>
-            <p>I like to think</p>
-            <p>(it has to be!)</p>
-            <p>of a cybernetic ecology</p>
-            <p>where we are free of our labors</p>
-            <p>and joined back to nature,</p>
-            <p>returned to our mammal</p>
-            <p>brothers and sisters,</p>
-            <p>and all watched over</p>
-            <p>by machines of loving grace.</p>
-            <br>
-            <p>- Richard Brautigan</p>
-            <a id="four"></a><h3>Project 4</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
-            <a id="five"></a><h3>Project 5</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
+        <p>Currently a student in the Web Development program at Seattle Central Community College. I am interested in both front-end and back-end web development. I've harbored a few passions that inform these interests. Lifelong hobbies like photography, design, and experimenting with different mediums in art motivate my interest in front-end development while my infatuation with logic, puzzles, mathematics, data science, systems, and statistics draw me to back-end development.</p>
+
+        <p>Previously I spent over 15 years working various positions within the restaurant industry, mostly in the front of the house as a bartender. My love of people, food, and flavors kept me in restaurants but the pandemic combined with a preexisting urge to return to school brought me to this program.</p>
+         
+        <p>Beyond school and work and the aforementioned interests I also love music, foraging, growing food, studying foodways and diasporas, history, social sciences, mycology, promoting community science, and my beloved cats.</p> 
+        <a id="one"></a><h3>Cards Against the Brink</h3>
+        <a href="ebrink.online">Live on ebrink.online</a>
+        <a href="github.com">Github repo</a>
+              <p>I like to think (and</p>
+              <p>the sooner the better!)</p>
+              <p>of a cybernetic meadow</p>
+              <p>where mammals and computers</p>
+              <p>live together in mutually</p>
+              <p>programming harmony</p>
+              <p>like pure water</p>
+              <p>touching clear sky.</p>
+            <a id="two"></a><h3>Refurbished Local Roastery</h3>
+            <a href="ebrink.online">Live on ebrink.online</a>
+            <a href="github.com">Github repo</a>
+              <p>I like to think</p>
+              <p>(right now, please!)</p>
+              <p>of a cybernetic forest</p>
+              <p>filled with pines and electronics</p>
+              <p>where deer stroll peacefully</p>
+              <p>past computers</p>
+              <p>as if they were flowers</p>
+              <p>with spinning blossoms.</p>
+            <a id="three"></a><h3>An Artist's Portfolio</h3>
+            <a href="ebrink.online">Live on ebrink.online</a>
+            <a href="github.com">Github repo</a>
+              <p>I like to think</p>
+              <p>(it has to be!)</p>
+              <p>of a cybernetic ecology</p>
+              <p>where we are free of our labors</p>
+              <p>and joined back to nature,</p>
+              <p>returned to our mammal</p>
+              <p>brothers and sisters,</p>
+              <p>and all watched over</p>
+              <p>by machines of loving grace.</p>
+              <p>- Richard Brautigan</p>
+            <a id="four"></a><h3>Custom RSS Feeds</h3>
+            <a href="ebrink.online">Live on ebrink.online</a>
+            <a href="github.com">Github repo</a>
+              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
+            <a id="five"></a><h3>Tapes on Deck</h3>
+            <a href="ebrink.online">Live on ebrink.online</a>
+            <a href="github.com">Github repo</a>
+              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
           </div>
     </div>
     <!-- TO HERE -->
