Updates to page content

--- a/html/member-pages/stephen-cushing.html
+++ b/html/member-pages/stephen-cushing.html
@@ -19,9 +19,9 @@
   <div id="page-body">
     <!-- CHANGE FROM HERE -->
     <div id="inner-page-body" style="align-content: center">
-      <h1>Stephen Cushing</h1>
-      <p1>This page is a work in progress</p1>
-      <img src="/images/stephen-photo.jpg" style="height: 100%; width: 100%">
+      <h1 style="font-family: Georgia; text-align: center">Stephen Cushing</h1>
+      <img src="/images/member-photos/CushingStephen.jpg" style="height: 50%; width: 50%; align-self: center">
+      <p1 style="font-family: Georgia; text-align: center">This page is a work in progress</p1>
 
     </div>
     <!-- TO HERE -->
