--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -37,56 +37,40 @@
         </ul>
       </div>
       <div id="text">
-        <a id="top"></a><h1>Hello World!</h1>
+        <a id="top"></a><h1>Hello World! I'm E. Brink!</h1>
+        <div id="about-links">
+          <a href="https://ebrink.online">Ebrink.Online</a></h3>
+          <a href="https://github.com/brinkbrink">Github</a>
+          <a href="https://www.linkedin.com/in/eebrink/">LinkedIn</a>
+          </div>
         <div id="pic-temp"><h2>A photo will go here!</h2></div>
+
         <p>Currently a student in the Web Development program at Seattle Central Community College. I am interested in both front-end and back-end web development. I've harbored a few passions that inform these interests. Lifelong hobbies like photography, design, and experimenting with different mediums in art motivate my interest in front-end development while my infatuation with logic, puzzles, mathematics, data science, systems, and statistics draw me to back-end development.</p>
 
         <p>Previously I spent over 15 years working various positions within the restaurant industry, mostly in the front of the house as a bartender. My love of people, food, and flavors kept me in restaurants but the pandemic combined with a preexisting urge to return to school brought me to this program.</p>
          
         <p>Beyond school and work and the aforementioned interests I also love music, foraging, growing food, studying foodways and diasporas, history, social sciences, mycology, promoting community science, and my beloved cats.</p> 
         <a id="one"></a><h3>Cards Against the Brink</h3>
-        <a href="ebrink.online">Live on ebrink.online</a>
-        <a href="github.com">Github repo</a>
-              <p>I like to think (and</p>
-              <p>the sooner the better!)</p>
-              <p>of a cybernetic meadow</p>
-              <p>where mammals and computers</p>
-              <p>live together in mutually</p>
-              <p>programming harmony</p>
-              <p>like pure water</p>
-              <p>touching clear sky.</p>
-            <a id="two"></a><h3>Refurbished Local Roastery</h3>
-            <a href="ebrink.online">Live on ebrink.online</a>
-            <a href="github.com">Github repo</a>
-              <p>I like to think</p>
-              <p>(right now, please!)</p>
-              <p>of a cybernetic forest</p>
-              <p>filled with pines and electronics</p>
-              <p>where deer stroll peacefully</p>
-              <p>past computers</p>
-              <p>as if they were flowers</p>
-              <p>with spinning blossoms.</p>
-            <a id="three"></a><h3>An Artist's Portfolio</h3>
-            <a href="ebrink.online">Live on ebrink.online</a>
-            <a href="github.com">Github repo</a>
-              <p>I like to think</p>
-              <p>(it has to be!)</p>
-              <p>of a cybernetic ecology</p>
-              <p>where we are free of our labors</p>
-              <p>and joined back to nature,</p>
-              <p>returned to our mammal</p>
-              <p>brothers and sisters,</p>
-              <p>and all watched over</p>
-              <p>by machines of loving grace.</p>
-              <p>- Richard Brautigan</p>
+        <a href="https://www.ebrink.online/cards-redux">Live on ebrink.online</a>
+        <a href="https://github.com/brinkbrink/cards-redux">Github repo</a>
+              <p>This project began as a hunt for ways to entertain across the coast from my family during the early days of COVID-19. While the hunt provided me with plenty of options, they weren't the options I wanted, so naturally I decided to craft my own! I decided on shamelessly mocking the modern day classic <em>Cards Against Humanity</em> down to the <span class="helvetica">Helvetica Nue</span>. This web application utilizes CSS3, HTML5, vanilla JavaScript and JQuery.</p>
+            <a id="two"></a><h3>Revamped Local Roastery Website</h3>
+            <a href="https://www.ebrink.online/scc/it162/fp/index.php">Live on ebrink.online</a>
+            <a href="https://github.com/brinkbrink/che">Github repo</a>
+            <a href="https://docs.google.com/document/d/1-yeSdxcXXtE7yaMLrHRgP27o7qqcEoLszNDxb-JuiS4/edit?usp=sharing">A Case Study</a>
+              <p>Cafe Che Che is a local, woman-owned coffee bean roastery with a website poised to show off their products, give more information about the business and its owner, host a store for national orders as well as provide a Google form for local orders. The owner of the business and its accompanying website came to me for a website refresh. It “worked,” but it still had unfulfilled potential.</p>
+            <a id="three"></a><h3>Tapes on Deck</h3>
+            <a href="https://ebrink.online/tapes">Live on ebrink.online</a>
+            <a href="https://github.com/brinkbrink/tapes">Github repo</a>
+              <p>A full-stack web application made to keep track of the user's tape collection or inventory. This application utilizes React, Express, and Node.js technologies.</p> 
             <a id="four"></a><h3>Custom RSS Feeds</h3>
-            <a href="ebrink.online">Live on ebrink.online</a>
-            <a href="github.com">Github repo</a>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
-            <a id="five"></a><h3>Tapes on Deck</h3>
-            <a href="ebrink.online">Live on ebrink.online</a>
-            <a href="github.com">Github repo</a>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p> 
+            <a href="https://ebrink.online/rss">Live on ebrink.online</a>
+            <a href="https://github.com/brinkbrink/p4-rss-feed">Github repo</a>
+              <p>Worked as team lead to create customizeable RSS feed web application. Uses SQL to scrape XML, Bootswatch for styles, and PHP to tie it all together.</p> 
+            <a id="five"></a><h3>An Artist's Portfolio</h3>
+            <a href="https://ebrink.online/artist">Live on ebrink.online</a>
+            <a href="https://github.com/brinkbrink/vic-v1">Github repo</a>
+              <p>Seattle area musician and artist was in need of a new website to showcase their work. They wanted something simple so as not to distract from their intricate illustrations and album cover art. This website includes a main page featuring illustrations, a page with embedded music, as well as contact and project pages.</p>
           </div>
     </div>
     <!-- TO HERE -->
