--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -37,7 +37,7 @@
         </ul>
       </div>
       <div id="text">
-        <a id="top"></a><h1>Hello World! I'm E. Brink!</h1>
+        <a id="top"></a><h1>Hello, World! I'm E. Brink!</h1>
         <div id="about-links">
           <a href="https://ebrink.online">Ebrink.Online</a></h3>
           <a href="https://github.com/brinkbrink">Github</a>
@@ -51,24 +51,24 @@
          
         <p>Beyond school and work and the aforementioned interests I also love music, foraging, growing food, studying foodways and diasporas, history, social sciences, mycology, promoting community science, and my beloved cats.</p> 
         <a id="one"></a><h3>Cards Against the Brink</h3>
-        <a href="https://www.ebrink.online/cards-redux">Live on ebrink.online</a>
+        <a href="https://www.ebrink.online/cards-redux">Live on Ebrink.Online</a>
         <a href="https://github.com/brinkbrink/cards-redux">Github repo</a>
               <p>This project began as a hunt for ways to entertain across the coast from my family during the early days of COVID-19. While the hunt provided me with plenty of options, they weren't the options I wanted, so naturally I decided to craft my own! I decided on shamelessly mocking the modern day classic <em>Cards Against Humanity</em> down to the <span class="helvetica">Helvetica Nue</span>. This web application utilizes CSS3, HTML5, vanilla JavaScript and JQuery.</p>
             <a id="two"></a><h3>Revamped Local Roastery Website</h3>
-            <a href="https://www.ebrink.online/scc/it162/fp/index.php">Live on ebrink.online</a>
+            <a href="https://www.ebrink.online/scc/it162/fp/index.php">Live on Ebrink.Online</a>
             <a href="https://github.com/brinkbrink/che">Github repo</a>
             <a href="https://docs.google.com/document/d/1-yeSdxcXXtE7yaMLrHRgP27o7qqcEoLszNDxb-JuiS4/edit?usp=sharing">A Case Study</a>
               <p>Cafe Che Che is a local, woman-owned coffee bean roastery with a website poised to show off their products, give more information about the business and its owner, host a store for national orders as well as provide a Google form for local orders. The owner of the business and its accompanying website came to me for a website refresh. It “worked,” but it still had unfulfilled potential.</p>
             <a id="three"></a><h3>Tapes on Deck</h3>
-            <a href="https://ebrink.online/tapes">Live on ebrink.online</a>
+            <a href="https://ebrink.online/tapes">Live on Ebrink.Online</a>
             <a href="https://github.com/brinkbrink/tapes">Github repo</a>
               <p>A full-stack web application made to keep track of the user's tape collection or inventory. This application utilizes React, Express, and Node.js technologies.</p> 
             <a id="four"></a><h3>Custom RSS Feeds</h3>
-            <a href="https://ebrink.online/rss">Live on ebrink.online</a>
+            <a href="https://ebrink.online/rss">Live on Ebrink.Online</a>
             <a href="https://github.com/brinkbrink/p4-rss-feed">Github repo</a>
-              <p>Worked as team lead to create customizeable RSS feed web application. Uses SQL to scrape XML, Bootswatch for styles, and PHP to tie it all together.</p> 
+              <p>Worked as team lead to create customizeable RSS feed web application. Uses SQL to store manipulated XML format to scape feeds, Bootswatch for styles, and PHP to tie it all together.</p> 
             <a id="five"></a><h3>An Artist's Portfolio</h3>
-            <a href="https://ebrink.online/artist">Live on ebrink.online</a>
+            <a href="https://Ebrink.Online/artist">Live on Ebrink.Online</a>
             <a href="https://github.com/brinkbrink/vic-v1">Github repo</a>
               <p>Seattle area musician and artist was in need of a new website to showcase their work. They wanted something simple so as not to distract from their intricate illustrations and album cover art. This website includes a main page featuring illustrations, a page with embedded music, as well as contact and project pages.</p>
           </div>
