organised folders and files
finished organised files and folders

links updated: foundation.css and navigation.css were merged together in style.css.

- style.css is a global css
- app.js is a global js

Also, I changed home.html filename for index.html. href and links were also updated.

cheers - fran

--- a/pages/members/members.html
+++ b/pages/members/members.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Seattle Central Programming Club</title>
-    <link rel="stylesheet" href="../css/foundation.css">
-    <link rel="stylesheet" href="../css/members.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="./members.css">
     <link rel="stylesheet" href="../css/navigation.css">
     <script src="../javascript/header.js" type="text/javascript" defer></script>
     <script src="../javascript/aside.js" type="text/javascript" defer></script>
