--- a/pages/member-profiles/fonseca-francisco/FonsecaFrancisco.html
+++ b/pages/member-profiles/fonseca-francisco/FonsecaFrancisco.html
@@ -20,8 +20,9 @@
         <!-- CHANGE FROM HERE -->
         <div id="inner-page-body" style="align-content: center">
 
-
-
+            <h4>Francisco Fonseca</h4>
+            <img src="" alt="Francisco's profile photo">
+            <p></p>
         </div>
         <!-- TO HERE -->
     </div>
