organised folders and files

--- a/html/member-pages/francisco-s-page.html
+++ b/html/member-pages/francisco-s-page.html
@@ -20,8 +20,9 @@
         <!-- CHANGE FROM HERE -->
         <div id="inner-page-body" style="align-content: center">
 
-
-
+            <h4>Francisco Fonseca</h4>
+            <img src="" alt="Francisco's profile photo">
+            <p></p>
         </div>
         <!-- TO HERE -->
     </div>
