finished organised files and folders
links updated: foundation.css and navigation.css were merged together in style.css.

- style.css is a global css
- app.js is a global js

Also, I changed home.html filename for index.html. href and links were also updated.

cheers - fran

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seattle Central College Programming Club</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./css/navigation.css" />
-    <script src="./js/header.js" type="text/javascript" defer></script>
-    <script src="./js/aside.js" type="text/javascript" defer></script>
-    <script src="./js/footer.js" type="text/javascript" defer></script>
+    <script src="./components/header/header.js" type="text/javascript" defer></script>
+    <script src="./components/aside/aside.js" type="text/javascript" defer></script>
+    <script src="./components/footer/footer.js" type="text/javascript" defer></script>
   </head>
   <body>
     <header-component></header-component>
